added styles and minimal data manipulation

--- a/index.html
+++ b/index.html
@@ -1,1 +1,83 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="src/css/styles.css">
+  <title>Oba</title>
+  <!-- <script src="node_modules/oba-wrapper/js/index.js" type="module"></script> -->
+
+</head>
+
+<body>
+<nav>
+  <ul>
+    <li><img src="https://obajunior.nl/static/img/logo.66b1d35.png" alt="oba logo static"></li>
+    <li><form class="" action="" method="post">
+      <input class="fun_txt" type="text" name="" value="" placeholder="Tom Cruise?">
+    </form></li>
+    <li></li>
+  </ul>
+</nav>
+
+<div class="main_wrapper">
+  <aside class="">
+    <h1><span>Y</span><span>o</span><span>u</span><span>r</span> <span>p</span><span>i</span><span>c</span><span>k</span><span>s</span></h1>
+    <div class="">
+    <article class="">
+    </article>
+    <article class="">
+    </article>
+    <article class="">
+    </article>
+    </div>
+  </aside>
+
+<div class="tricolor">
+<h1 id="pick">Pick <span id="numb">3</span> books</h1>
+<main>
+
+<article class="temp">
+<img class="imgo" src="" alt="">
+</article>
+
+<article class="temp">
+<img class="imgo" src="" alt="">
+</article>
+
+<article class="temp">
+<img class="imgo" src="" alt="">
+</article>
+
+<article class="temp">
+<img class="imgo" src="" alt="">
+</article>
+
+<article class="temp">
+<img class="imgo" src="" alt="">
+</article>
+
+<article class="temp">
+<img class="imgo" src="" alt="">
+</article>
+
+<article class="temp">
+<img class="imgo" src="" alt="">
+</article>
+
+<article class="temp">
+<img class="imgo" src="" alt="">
+</article>
+
+<article class="temp">
+<img class="imgo" src="" alt="">
+</article>
+
+</main>
+</div>
+
+</div>
+<script type="module" src="src/js/script.js" >
+</script>
+</body>
