--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <ul>
     <li><img src="https://obajunior.nl/static/img/logo.66b1d35.png" alt="oba logo static"></li>
     <li><form class="" action="" method="post">
-      <input class="fun_txt" type="text" name="" value="" placeholder="Tom Cruise?">
+      <input class="fun_txt" type="text" name="" value="" placeholder="This doesnt work yet...">
     </form></li>
     <li></li>
   </ul>
@@ -23,58 +23,18 @@
 
 <div class="main_wrapper">
   <aside class="">
+    <button type="button" name="button">Empty me</button>
     <h1><span>Y</span><span>o</span><span>u</span><span>r</span> <span>p</span><span>i</span><span>c</span><span>k</span><span>s</span></h1>
     <div class="">
-    <article class="">
-    </article>
-    <article class="">
-    </article>
-    <article class="">
-    </article>
     </div>
   </aside>
 
 <div class="tricolor">
 <h1 id="pick">Pick <span id="numb">3</span> books</h1>
-<main>
-
-<article class="temp">
-<img class="imgo" src="" alt="">
-</article>
-
-<article class="temp">
-<img class="imgo" src="" alt="">
-</article>
-
-<article class="temp">
-<img class="imgo" src="" alt="">
-</article>
-
-<article class="temp">
-<img class="imgo" src="" alt="">
-</article>
-
-<article class="temp">
-<img class="imgo" src="" alt="">
-</article>
-
-<article class="temp">
-<img class="imgo" src="" alt="">
-</article>
-
-<article class="temp">
-<img class="imgo" src="" alt="">
-</article>
-
-<article class="temp">
-<img class="imgo" src="" alt="">
-</article>
-
-<article class="temp">
-<img class="imgo" src="" alt="">
-</article>
-
+<h1 class="hidden" id="you">You might like...</h1>
+<main class="" id="root">
 </main>
+
 </div>
 
 </div>
