load state added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <ul>
     <li><img src="https://obajunior.nl/static/img/logo.66b1d35.png" alt="oba logo static"></li>
     <li><form class="" action="" method="post">
-      <input class="fun_txt" type="text" name="" value="" placeholder="This doesnt work yet...">
+      <input class="fun_txt" type="text" name="" value="" placeholder="Search...">
     </form></li>
     <li></li>
   </ul>
