--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <ul>
     <li><img src="https://obajunior.nl/static/img/logo.66b1d35.png" alt="oba logo static"></li>
     <li><form class="" action="" method="post">
-      <input class="fun_txt" type="text" name="" value="" placeholder="Search...">
+      <input class="fun_txt" type="text" name="" value="" placeholder="Zoeken...">
     </form></li>
     <li></li>
   </ul>
@@ -23,15 +23,15 @@
 
 <div class="main_wrapper">
   <aside class="">
-    <button type="button" name="button">Empty me</button>
-    <h1><span>Y</span><span>o</span><span>u</span><span>r</span> <span>p</span><span>i</span><span>c</span><span>k</span><span>s</span></h1>
+    <button type="button" name="button">ELeeg me</button>
+    <h1><span>J</span><span>o</span><span>u</span><span>w</span> <span>k</span><span>e</span><span>u</span><span>z</span><span>e</span><span>s</span></h1>
     <div class="">
     </div>
   </aside>
 
 <div class="tricolor">
-<h1 id="pick">Pick <span id="numb">3</span> books</h1>
-<h1 class="hidden" id="you">You might like...</h1>
+<h1 id="pick">Kies <span id="numb">3</span> boeken</h1>
+<h1 class="hidden" id="you">Misschien vind je dit leuk...</h1>
 <main class="" id="root">
 </main>
 
