fix merge conflict

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <div class="main_wrapper">
   <aside class="">
-    <button type="button" name="button">ELeeg me</button>
+    <button type="button" name="button">Leeg me</button>
     <h1><span>J</span><span>o</span><span>u</span><span>w</span> <span>k</span><span>e</span><span>u</span><span>z</span><span>e</span><span>s</span></h1>
     <div class="">
     </div>
