image for external project

--- a/index.html
+++ b/index.html
@@ -40,4 +40,5 @@
 </div>
 <script type="module" src="src/js/script.js" >
 </script>
+<img class="hidden" src="src/img/oh_nee_niet_weer_een_boek.svg" alt="oh nee niet weer een boek">
 </body>
